Site Consistency and adjustments to About Us pages
Changes in the main header font and sizes, made it consistent throughout
all pages to make the website look neater. also did the same for the
headings on the navigation side bar and made the content text abit
larger so it is easier to read.

Made adjustments to the about us pages for overall look.

--- a/becomeplayer.html
+++ b/becomeplayer.html
@@ -84,7 +84,7 @@ image5.src = "images/slide5.jpg"
   <div id="pagepadding">.</div>
   <section id="maincontent">
 <section id="SideMenuBar" class="smallpage">
-	<h1><a href="contact.html">Contact us</a></h1>
+	<h2><a href="contact.html">Contact us</a></h2>
 	<a href="becomemember.html">Become a Member</a><br>
 	Become a Player<br>
 	<a href="supportus.html">Support Us</a><br><br>
@@ -94,7 +94,7 @@ image5.src = "images/slide5.jpg"
 <section id="ContentText">
 	<!--CONTENT-->
 	
-    <h2 class="content-head is-center">Become a Player!</h2>
+    <h1>Become a Player!</h1>
   <aside>
        <p>
           Interested in Playing in the Orchestra?</p>
