--- a/specialguests.html
+++ b/specialguests.html
@@ -82,7 +82,7 @@ image5.src = "images/slide5.jpg"
   <div id="pagepadding">.</div>
   <section id="maincontent">
 <section id="SideMenuBar" class="smallpage">
-	<h1><a href="aboutus.html">About us</a></h1>
+	<h2><a href="aboutus.html">About us</a></h2>
 	<a href="history.html">History</a><br>
 	Special guests<br>
 	<a href="lifemembers.html">Life members</a><br>
@@ -101,7 +101,7 @@ image5.src = "images/slide5.jpg"
 <div id="paraClear"> 
    <h2>Mark Shiell (Conductor)</h2> 
    
-   <img src="images/markconducting.jpg" width="320" height="214" alt=""/>
+   <img src="images/markconducting.jpg" width="196" height="214" alt=""/>
    <p> Mark has guest-conducted ensembles including the Melbourne Symphony Orchestra, West Australian Symphony, Moscow Symphony Orchestra, State Academic Symphony Orchestra of St. Petersburg, Victorian Opera, Orchestra Ensemble Kanazawa, Canberra Symphony Orchestra, Sydney Sinfonia, Melbourne Youth Orchestra, University of Melbourne Symphony Orchestra and the Orchestras of the State Music Camps in Melbourne and Adelaide. 
 
 <script type="text/javascript">
@@ -340,7 +340,7 @@ Bronwyn has received many awards, a Finalist in the Sun aria in 2015,winner of t
 <p> Born in Kobe, Japan, Yoshika Masuda first started to play the cello at the age of five. Following studies with George Pedersen in Australia, he went onto study at the Royal Northern College of Music in Manchester on a full scholarship. 
 
     <a href="javascript:showhide('ReadMoreText10')">
-        Read More
+        Read More <br><br><br><br><br><br><br><br><br><br>
     </a>
 <!-- Javascript from W3 Schools Tutorial--->
     <div id="ReadMoreText10" style="display:none;">
@@ -354,7 +354,6 @@ Yoshika is currently continuing his studies in Los Angeles as a Doctorate studen
 </div>
 </section>
 </div>
-
     <footer>
    <!--FOOTER-->
     <div id="footerBkg">
