--- a/aboutus.html
+++ b/aboutus.html
@@ -82,10 +82,10 @@ image5.src = "images/slide5.jpg"
   <div id="pagepadding">.</div>
   <section id="maincontent">
 <section id="SideMenuBar" class="smallpage">
-	<h1><a href="aboutus.html">About us</a></h1>
+	<h2><a href="aboutus.html">About us</a></h2>
 	<a href="history.html">History</a><br>
 	<a href="specialguests.html">Special guests</a><br>
-	<a href="lifemembers.html">Life members</a><br>
+	<a href="lifemembers.html">Life members</a><br><br>
   <!-- Facebook Plugin-->
 <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnqorchestra&tabs=timeline&width=300&height=400&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="100%" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 </section>
