--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@ image5.src = "images/slide5.jpg"
   <div id="pagepadding">.</div>
   <section id="maincontent">
 <section id="SideMenuBar" class="smallpage">
-	<h1><a href="contact.html">Contact us</a></h1>
+	<h2><a href="contact.html">Contact us</a></h2>
 	<a href="becomemember.html">Become a Member</a><br>
 	<a href="becomeplayer.html">Become a Player</a><br>
 	<a href="supportus.html">Support Us</a><br><br>
@@ -95,7 +95,7 @@ image5.src = "images/slide5.jpg"
 <section id="ContentText">
 	<!--CONTENT-->
 	
-    <h2 class="content-head is-center">Contact Us!</h2>
+    <h1>Contact Us!</h1>
   <aside>
        <p>
            Have a General Enquiry? </p>
