--- a/report.html
+++ b/report.html
@@ -34,27 +34,31 @@
 <h2>Goals</h2>
 <p>The main goal is to raise awareness of the Barrier Reef Orchestra and &nbsp;increase the number of people attending the concerts and getting involved in the Orchestra itself. The site should also help to increase the number of sponsors for the orchestra, and conductors showing interest in getting involved.</p>
 <h2>Completed Work by Who</h2>
-<p>brief details of who did what</p>
+<p>&nbsp;</p>
 <ul>
-    <li><strong>Luke West: </strong> Gallery Pages </li>
+  <li><strong>Luke West: </strong> Gallery Pages </li>
     <li><strong>James Shuttleworth: </strong> Contacts pages </li>
     <li><strong>Yuval Bernstein: </strong> About Us Pages </li>
     <li><strong>Kim Hardie</strong> Events Pages </li>
+    <br>
+
+ <p>Tasks such as the project plan and the report were evenly distributed between team members. As seen above the site was split up into four main sections and each team member was assigned a section to complete.</p><br>
+
 </ul>
 <h2>Testing Details</h2>
-<p>Clicking on the link to purchase a ticket for a concert will bring you to the Townsville ticket shop page. There are no issues that need to be noted.</p>
+<p>Clicking on the link to purchase a ticket for a concert will bring you to the Townsville ticket shop page. There are no major issues that need to be noted.</p>
 <h2>References</h2>
 
 <ul>
-    <li> Facebook Plugin - https://developers.facebook.com/docs/plugins/page-plugin </li>
-    <li> HTML for contact form and javascipt for publishing to google spreadsheet used from tutorial - https://github.com/dwyl/html-form-send-email-via-google-script-without-server </li>
-    <li> Hiding Text Javascript from W3 Schools Tutorial - http://www.w3schools.com/ </li>
+    <li> Facebook Plugin - <a href="https://developers.facebook.com/docs/plugins/page-plugin" >https://developers.facebook.com/docs/plugins/page-plugin</a> </li>
+    <li> HTML for contact form and javascipt for publishing to google spreadsheet used from tutorial - <a href="https://github.com/dwyl/html-form-send-email-via-google-script-without-server" >https://github.com/dwyl/html-form-send-email-via-google-script-without-server </a> </li>
+    <li> Hiding Text Javascript from W3 Schools Tutorial - <a href= "http://www.w3schools.com/" >http://www.w3schools.com/ </a> </li>
     
 </ul>
 <h2>PMI</h2>
 
 <p><strong>Pluses: </strong> The work load was slip which allowed each team member to focus on certain aspects of the website to achieve a higher quality of work. All team members were able to share different ideas on website design and layout and were respectful of each other's opinions. We were able to learn from each other and improve our individual knowledge of web design by working in this group environment.</p>
-<p><strong>Minuses: </strong> Trying to designate times for group meetings that were suitable for every member and adjusted to their other commitments was often difficult.</p>
+<p><strong>Minuses: </strong> Trying to designate times for group meetings that were suitable for every member and adjusted to their other commitments was often difficult. Apart from this there were no major issues to speak of, as the team worked really well together.</p>
 <p><strong>Interesting: </strong> It was interesting to see how well we worked together as a group despite none of us knowing each other before hand. Each team member had enough empathy to complete the assignment without any disputes between group members. Problems were resolved quickly with no arguments. It was also interesting to observe how individual team members used different methods to complete given tasks, and we were able to learn from each other as a result.  </p>
 </body>
 </html>
