Edited text in home page and upcoming events page
changed the call to action in upcoming events page, to make it easier
too see. Also deleted some text in home page

--- a/index.html
+++ b/index.html
@@ -149,15 +149,10 @@ image5.src = "images/slide5.jpg"
     </a>
 <!-- Javascript from W3 Schools Tutorial--->
     <div id="ReadMoreText" style="display:none;">
-        <p>An outstanding performance of Beethoven’s 9th Symphony presented to a sell-out audience was recently followed by Peter Sculthorpe’s Mangroves, a collaboration with audio-visual artists, ABC radio and Umbrella Studios. The programs are testament to the orchestra’s willingness to embrace mainstream classical repertoire as well as opportunities for collaboration.	</p>
+        
+<p>An outstanding performance of Beethoven’s 9th Symphony presented to a sell-out audience was recently followed by Peter Sculthorpe’s Mangroves, a collaboration with audio-visual artists, ABC radio and Umbrella Studios. The programs are testament to the orchestra’s willingness to embrace mainstream classical repertoire as well as opportunities for collaboration.</p>
 
-<p>An outstanding performance of Beethoven’s 9th Symphony presented to a sell-out audience, won the Townsville City Council Arts Award for best musical production in 2011. This was recently followed by performing Peter Sculthorphe’s Mangroves, a collaboration with audio-visual artists, performing on ABC radio and at Umbrella Studios. Another recent highlight was playing with James Morrison for the second time to present Latin Fiesta, which was originally done with the Western Australian Orchestra. </p>
-
-<p> In 2015 the orchestra was invited to perform in three festivals, joining with the AFCM to present a free public concert in Queens Garden the 1812!; Dancenorth at Jezzine Barracks for Twilight and featured in World Music as part of the Townsville Civic Theatre music season. This was a first for the orchestra - underscoring its value to the community and highlighting its continued prominence in the cultural soundscape of North Queensland. </p>
-
-<p> Now to 2016 which is going to be a stellar year for your Orchestra. Already we have our three major concerts which will include opera, featuring Paul Tabone born in Ingham, but now working the international stage as a tenor based in Italy. Rachmaninov’s Piano Concerto No.2 featuring last year’s winner of the instrumental section of the ACVC, Arthur Athan. Our opening performance titled Dreams and Dances is sure to have some favourites such as Afternoon of a Fawn by Debussy. </p>
-
-<p> We are also pleased to be part of the Townsville 150 Concert where we will share the stage with the likes of David Campbell, Luke Kennedy, Bronwyn Douglas and the 1 RAR Band just to name a few of the guests. We will be back to Queens Gardens for a repeat performance as part of AFCM due to the huge popularity of last year’s concert. </p>
+<p>In 2015 the orchestra has been invited to perform in three festivals, and features in the Townsville Civic Theatre season. This is a first for the orchestra - underscoring its value to the community and highlighting its continued prominence in the cultural soundscape of North Queensland.</p>
 
 
     </div>
