--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -97,7 +97,7 @@ image5.src = "images/slide5.jpg"
     <h1>Barrier Reef Orchestra<br>
     2016 Concert Season</h1>	
     
-    <h2>Buy tickets from the: <a href="https://www.townsville.qld.gov.au/facilities-and-recreation/theatres-and-galleries/ticketshop">Ticket Shop</a></h2>
+    <strong>Buy tickets from the: <a href="https://www.townsville.qld.gov.au/facilities-and-recreation/theatres-and-galleries/ticketshop">Ticket Shop</a></strong>
     <h2><em>Dreams and Dances</em></h2>
     <p><strong>Tuesday 8th March 7:30pm</strong><br>
     Townsville Civic Theatre<br>
