--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ image5.src = "images/slide5.jpg"
 <section id="ContentText">
 	<!--CONTENT-->
 	<h1>News</h1>
-	<h2><a href="upcomingevents.html">Upcoming events</a></h2>
-    <strong>Buy tickets from the: <a href="https://www.townsville.qld.gov.au/facilities-and-recreation/theatres-and-galleries/ticketshop">Ticket Shop</a></strong>
+	<h1><a href="upcomingevents.html">Upcoming events</a></h1>
+    <h3><strong>Buy tickets from the: <a href="https://www.townsville.qld.gov.au/facilities-and-recreation/theatres-and-galleries/ticketshop">Ticket Shop</a></strong></h3>
     <img src="images/image1.jpg" style="float:right">
 	<p>
     <ul>
@@ -119,7 +119,7 @@ image5.src = "images/slide5.jpg"
 	<br/>
 	<br/>
 	</p>
-	<h2>Become a member</h2>
+	<h1><a href="becomemember.html">Become a member</a></h1>
 	<p>
     <img src="images/image2.jpg" style="float:right">
 	<br/>
@@ -127,7 +127,7 @@ image5.src = "images/slide5.jpg"
 	<br/>
 	<br/>
 
-		<a href="becomemember.html">Sign Up Sheet</a>
+		<h3><strong><em><a href="becomemember.html">Sign Up Sheet</a></em></strong></h3>
 	<br/>
 	<br/>
 	<br/>
