--- a/specialguests.html
+++ b/specialguests.html
@@ -352,6 +352,19 @@ Yoshika is currently continuing his studies in Los Angeles as a Doctorate studen
 
 </div>
 </div>
+
+<h2> More Special Guests </h2>
+
+<p>Stefan Cassomenos</p>
+<p>James Morrison</p>
+<p>Rebecca Chan</p>
+<p>David Lawrence</p>
+<p>Sean O'Boyle</p>
+<p>Blair Harris</p>
+<p>Ji Won Kim</p>
+
+
+
 </section>
 </div>
     <footer>
