--- a/becomemember.html
+++ b/becomemember.html
@@ -160,7 +160,9 @@ The North Queensland Ensembles Inc is a tax deductible fund listed on the Regist
     
  <br>
 <br>
-<br>
+<h1> Become a Benefactor </h1>
+
+<p><em>Become an Orchestra Benefactor and assist Townsville’s Community Orchestra with your personal and publicly acknowledged support which encourages others to do the same. </em></p>
 
 <p> If you are interested in becoming a benefactor, please click the link below and fill out the form. <br>
 Follow the instructions listed above the form to send it to us!<br>
@@ -168,6 +170,31 @@ Thank you for supporting us!</p>
 
 
 <a href="http://www.nqorchestra.com.au/docs/north-queensland-orchestra-benefactor-form.pdf">Benefactor Form</a><br>
+
+
+<h2>North Queensland Ensembles Inc <br>
+<strong> BENEFACTORS' ROLL </strong> </h2>
+
+
+<p>Dr Kevin Arlett<br> 
+Carol Dall'Osto <br> 
+Councillor Ray Gartrell <br> 
+Bruce Gibson and Dorothy Gibson-Wilde O.A.M. <br> 
+Dr Kerry Gillespie <br> 
+Peter Honeycombe <br> 
+Judy Hunter O.A.M. <br> 
+Ewen Jones MP <br> 
+David and Janine Kippin <br> 
+Simon and Lorraine McConnell <br> 
+Senator Ian McDonald <br> 
+Janice Mays <br> 
+Terry O'Toole <br> 
+Bronia and Neil Renison <br> 
+Desley Wheeler <br> 
+Graham Wheeler <br> <br> 
+
+@ 23 March 2016 </p>
+
 
 
         
