--- a/rehearsal.html
+++ b/rehearsal.html
@@ -84,9 +84,9 @@ image5.src = "images/slide5.jpg"
   <div id="pagepadding">.</div>
   <section id="maincontent">
 <section id="SideMenuBar" class="smallpage">
-	<h2><a href="upcomingevents.html">Events</a></h2>
-	<a href="upcomingevents.html">Upcoming events</a><br>
-	<a href="pastevents.html">Past events</a><br>
+	<h2><a href="upcomingEvents.html">Events</a></h2>
+	<a href="upcomingEvents.html">Upcoming events</a><br>
+	<a href="pastEvents.html">Past events</a><br>
 	Rehearsal schedule<br><br>
   <!-- Facebook Plugin-->
 <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnqorchestra&tabs=timeline&width=300&height=400&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="100%" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
