--- a/report.html
+++ b/report.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Report for Group Number??</title>
+    <title>Report for Group 12</title>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <style type="text/css">
         body {
@@ -26,10 +26,11 @@
 <p><strong>Members:</strong> Luke West, James Shuttleworth, Yuval Bernstein, Kim Hardie</p>
 <h2>Project Links</h2>
 <ul>
-    <li><a href="http://ditwebcns.jcu.edu.au/~bro12/m2/">Home Page</a></li>
+    <li><a href="http://ditwebcns.jcu.edu.au/~bro12/">Home Page</a></li>
     <li><a href="https://trello.com/b/QHIm4E6D/group-12-barrier-reef-orchestra" >Team 12 Trello board</a></li>
     <li><a href="https://github.com/nishiluke/Group-12-Barrier-Reef-Orchestra" >Team 12 GitHub repository.</a> <br> usernames: Luke - nishiluke, James - JamesShuttleworth, Yuvi - yuvibernstein, Kim - Deadelven</li>
     <li><a href="https://itatjcu.slack.com/archives/cp1406-2016-team-12" >Team 12 Slack Channel</a> </li>
+    <li><a href="Fbconvolog.txt"> Coversation on Facebook in .txt file format</a></li>
 </ul>
 <h2>Goals</h2>
 <p>The main goal is to raise awareness of the Barrier Reef Orchestra and &nbsp;increase the number of people attending the concerts and getting involved in the Orchestra itself. The site should also help to increase the number of sponsors for the orchestra, and conductors showing interest in getting involved.</p>
