--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ image5.src = "images/slide5.jpg"
 <section id="ContentText">
 	<!--CONTENT-->
 	<h1>News</h1>
-	<h1><a href="upcomingevents.html">Upcoming events</a></h1>
+	<h1><a href="upcomingEvents.html">Upcoming events</a></h1>
     <h3><strong>Buy tickets from the: <a href="https://www.townsville.qld.gov.au/facilities-and-recreation/theatres-and-galleries/ticketshop">Ticket Shop</a></strong></h3>
     <img src="images/image1.jpg" style="float:right">
 	<p>
